Darkened the secondary colour slightly on some of the subjects so that the text would be more legible. Fixed the drop shadow on the add a subject button.

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -1363,16 +1363,17 @@ input:focus {outline:0;}
     width: 100%;
     text-align: center;
     background-color: #95CAAD;
-    -webkit-box-shadow: -1px 13px 21px -10px rgba(163,148,163,0.30);
-    -moz-box-shadow: -1px 13px 21px -10px rgba(163,148,163,0.30);
-    box-shadow: -1px 13px 21px -10px rgba(163,148,163,0.30);
+    -webkit-box-shadow: -1px 13px 21px -10px rgba(154, 140, 154, 0.4);
+    -moz-box-shadow: -1px 13px 21px -10px rgba(154, 140, 154, 0.4);
+    box-shadow: -1px 13px 21px -10px rgba(154, 140, 154, 0.4);
     cursor: pointer;
+    position: relative;
 }
 
 #addSubjectButton:hover{
-    -webkit-box-shadow: -1px 13px 21px -10px rgba(151, 137, 151, 0.4);
-    -moz-box-shadow: -1px 13px 21px -10px rgba(163,148,163,0.40);
-    box-shadow: -1px 13px 21px -10px rgba(163,148,163,0.40);
+    -webkit-box-shadow: -1px 13px 21px -10px rgba(154, 140, 154, 0.4);
+    -moz-box-shadow: -1px 13px 21px -10px rgba(154, 140, 154, 0.4);
+    box-shadow: -1px 13px 21px -10px rgba(154, 140, 154, 0.4);
 }
 
 .completedTasksButton{
@@ -1879,8 +1880,8 @@ input:focus {outline:0;}
 
 .theme1Colour1 {color: #F4A460; fill: #F4A460;} /*text and bar fill colour*/
 .theme1Colour1.mainColour {background-color: #F4A460;}
-.theme1Colour1.secondaryColour {background-color: #EEC58F;}
-.theme1Colour1.active {background-color: #EEC58F;} /*active subject button colour*/
+.theme1Colour1.secondaryColour {background-color: #F9BF81;}
+.theme1Colour1.active {background-color: #F9BF81;} /*active subject button colour*/
 .theme1Colour1.expanded {color: #FFFFFF;} /*text colour for titles of expanded tasks*/
 
 .theme1Colour2 {color: #F3742B; fill: #F3742B;} /*text and bar fill colour*/
@@ -1921,20 +1922,20 @@ input:focus {outline:0;}
 
 .theme1Colour8 {color: #607A93; fill: #607A93;}  /*text and bar fill colour*/
 .theme1Colour8.mainColour {background-color: #607A93;}
-.theme1Colour8.secondaryColour {background-color: #baccd9;}
-.theme1Colour8.active {background-color: #baccd9;} /*active subject button colour*/
+.theme1Colour8.secondaryColour {background-color: #99BED3;}
+.theme1Colour8.active {background-color: #99BED3;} /*active subject button colour*/
 .theme1Colour8.expanded {color: #FFFFFF;} /*text colour for titles of expanded tasks*/
 
-.theme1Colour9 {color: #A0AFBE; fill: #A0AFBE;} /*text and bar fill colour*/
+.theme1Colour9 {color: #7B9FB6; fill: #A0AFBE;} /*text and bar fill colour*/
 .theme1Colour9.mainColour {background-color: #A0AFBE;}
-.theme1Colour9.secondaryColour {background-color: #C6D2DD;}
-.theme1Colour9.active {background-color: #C6D2DD;} /*active subject button colour*/
+.theme1Colour9.secondaryColour {background-color: #B1C5D2;}
+.theme1Colour9.active {background-color: #B1C5D2;} /*active subject button colour*/
 .theme1Colour9.expanded {color: #FFFFFF;} /*text colour for titles of expanded tasks*/
 
-.theme1Colour10 {color: #7EC6D5; fill: #7EC6D5;} /*text and bar fill colour*/
+.theme1Colour10 {color: #5DB0BC; fill: #7EC6D5;} /*text and bar fill colour*/
 .theme1Colour10.mainColour {background-color: #7EC6D5;}
-.theme1Colour10.secondaryColour {background-color: #BCDBE1;}
-.theme1Colour10.active {background-color: #BCDBE1;} /*active subject button colour*/
+.theme1Colour10.secondaryColour {background-color: #8ED4DE;}
+.theme1Colour10.active {background-color: #8ED4DE;} /*active subject button colour*/
 .theme1Colour10.expanded {color: #FFFFFF;} /*text colour for titles of expanded tasks*/
 
 .theme1Colour11 {color: #31A9A8; fill: #31A9A8;} /*text and bar fill colour*/
@@ -1945,8 +1946,8 @@ input:focus {outline:0;}
 
 .theme1Colour12 {color: #1E7D8A; fill: #1E7D8A;} /*text and bar fill colour*/
 .theme1Colour12.mainColour {background-color: #1E7D8A;}
-.theme1Colour12.secondaryColour {background-color: #97C7CD;}
-.theme1Colour12.active {background-color: #97C7CD;} /*active subject button colour*/
+.theme1Colour12.secondaryColour {background-color: #6CBBC2;}
+.theme1Colour12.active {background-color: #6CBBC2;} /*active subject button colour*/
 .theme1Colour12.expanded {color: #FFFFFF;} /*text colour for titles of expanded tasks*/
 
 
